Fix wrap

--- a/src/components/QuestionExplorerQuestionList/QuestionExplorerQuestionList.module.scss
+++ b/src/components/QuestionExplorerQuestionList/QuestionExplorerQuestionList.module.scss
@@ -25,7 +25,6 @@
             line-height: 21rem;
             letter-spacing: 0.01em;
             color: #5B5B5B;
-            white-space: nowrap;
         }
 
         &-control {
